--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Blank</title>
+    <title>FizzBuzz generator</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -26,7 +26,15 @@
 <div class="container">
 
     <h1>Hello World!</h1>
-    <p class="lead">This is something!</p>
+    <p class="lead">Welcome to fizz buzz generator</p>
+
+    <div class="form-group">
+      <label for="usr">Enter a number and below and I will generate fizz buzz string:</label>
+      <input type="text" class="form-control" id="number">
+    </div>
+
+    <h3 id="output"></h2>
+
 
 </div><!-- /.container -->
 
@@ -36,5 +44,6 @@
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="js/jquery-2.1.4.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script src="js/fizzbuzz.js"></script>
 </body>
 </html>
